--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="index.html">About</a>
             <a href="portfolio.html">Portfolio</a>
-            <a href="contacts.html">Contacts</a>
+            <a href="contacts.html">Contact</a>
         </nav>
     </header>
 
@@ -45,9 +45,11 @@
     </p>
 
     <!--Footer Section-->
-    <p>
-        Copyright &copy;
-    </p>
+    <footer>
+        <p>
+            Copyright &copy;
+        </p>
+    </footer>
 
     
 </body>
