--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!--Header and Nav Section-->
+    <header>
+        <h2>Cameron Hallmen</h2>
+        <nav>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contacts.html">Contact</a>
+        </nav>
+    </header>
+
+    <!--Footer Section-->
+    <footer>
+        <p>
+            Copyright &copy;
+        </p>
+    </footer>
     
 </body>
 </html>
