--- a/index.html
+++ b/index.html
@@ -5,49 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+<body background="assets/images/gravel.png">
 
     <!--Header and Nav Section-->
-    <header>
-        <h2>Cameron Hallmen</h2>
-        <nav>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contacts.html">Contact</a>
-        </nav>
+<section id="headerwrap">
+    <header class="pagewidth clearfix" id="header">
+        
+            <div id="siteName">
+                <h1><span class="txtBackground">Cameron Hallmen</span></h1>
+            </div>
+            <div>
+                <ul class="nav">
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contacts.html">Contact</a></li>
+                </ul>
+            </div>
+        
     </header>
+</section>
 
     <!--Bio Section-->
+    <section id="bio" class="pagewidth clearfix">
     <h2>About Me</h2>
-    <img src="assets/images/profilepic.jpg" alt="Beautiful Picture of Cameron Hallmen looking dapper" height="200px">
+    <hr>
+    <br>
+    <img src="assets/images/profilepic.jpg" alt="Beautiful Picture of Cameron Hallmen looking dapper" height="200px" id="img" class="clearfix">
     <p>
-        On August 14th, 2018, I began my journey into Web Development. I'm only a few days in, but have already gained an immense ammount of knowledge in this craft. <br>
-        I will continue this course and secure what I hope to be a huge career and quality of life change. I can't wait to list out a wealth of expertise and certificatioins <br>
+        On August 14th, 2018, I began my journey into Web Development. I'm only a few days in, but have already gained an immense ammount of knowledge in this craft. 
+        I will continue this course and secure what I hope to be a huge career and quality of life change. I can't wait to list out a wealth of expertise and certificatioins 
         here but until then, I can tell you a little about what I've accomplished so far. 
     </p>
 
     <p>
-        In 2013, I graduated with an Associate's Degree from the Acadamy of Contemporary Music at the University of Central Oklahoma. Quite a mouthful for a useless <br>
-        academic accomplishment. I had dreams of creating a new heavy metal band and touring the world. I moved to Colorado in pursuit of a good job with which I could <br>
-        gain finances to acrue the music equipment I would need to create such a project. After a while, the job fell through and I was nowhere closer to achieving my goals <br>
-        About that same time, two of my old friends stopped by on a cross-country trip to Florida. They were moving there to start a new business, and a new band. They spent <br>
+        In 2013, I graduated with an Associate's Degree from the Acadamy of Contemporary Music at the University of Central Oklahoma. Quite a mouthful for a useless 
+        academic accomplishment. I had dreams of creating a new heavy metal band and touring the world. I moved to Colorado in pursuit of a good job with which I could 
+        gain finances to acrue the music equipment I would need to create such a project. After a while, the job fell through and I was nowhere closer to achieving my goals 
+        About that same time, two of my old friends stopped by on a cross-country trip to Florida. They were moving there to start a new business, and a new band. They spent 
         all day telling me about the music opportunities that could only be found in the state, and said I should join them somday. Someday ended up coming the following week.
     </p>
 
     <p>
-        I sold my car, hopped into a moving truck and left Colorado. Two days later, I found myself in Florida surrounded by friends and with about twenty five cents in my pocket. <br>
-        We then began the journey of finding new jobs, new places to live and most importantly, new music opportunities. We lived in a warehouse attatched to a friend's business for <br>
-        almost a year. In that time, we were able to make enough money to secure some good-quality gear and an apartment. After multiple failed bands, I ended up playing bass with my <br>
-        friends in On Letting Go. We played all over Florida in this band, and even got a few chances to play sold-out shows with big names in the industry. During this time, I was <br>
-        able to work my up to Store Manager at the retail location where I was employed. On Letting Go eventually disbanded, and that brings me to the current day, where I sit at my <br>
+        I sold my car, hopped into a moving truck and left Colorado. Two days later, I found myself in Florida surrounded by friends and with about twenty five cents in my pocket. 
+        We then began the journey of finding new jobs, new places to live and most importantly, new music opportunities. We lived in a warehouse attatched to a friend's business for 
+        almost a year. In that time, we were able to make enough money to secure some good-quality gear and an apartment. After multiple failed bands, I ended up playing bass with my 
+        friends in On Letting Go. We played all over Florida in this band, and even got a few chances to play sold-out shows with big names in the industry. During this time, I was 
+        able to work my way up to Store Manager at the retail location where I was employed. On Letting Go eventually disbanded, and that brings me to the current day, where I sit at my 
         computer with high hopes for the future!
     </p>
+    </section>
 
     <!--Footer Section-->
     <footer>
-        <p>
-            Copyright &copy;
+        <p class="centerText">
+            <small>Copyright &copy;</small>
         </p>
     </footer>
 
