--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         academic accomplishment. I had dreams of creating a new heavy metal band and touring the world. I moved to Colorado in pursuit of a good job with which I could 
         gain finances to acrue the music equipment I would need to create such a project. After a while, the job fell through and I was nowhere closer to achieving my goals 
         About that same time, two of my old friends stopped by on a cross-country trip to Florida. They were moving there to start a new business, and a new band. They spent 
-        all day telling me about the music opportunities that could only be found in the state, and said I should join them somday. Someday ended up coming the following week.
+        all day telling me about the music opportunities that could only be found in the state, and said I should join them someday. Someday ended up coming the following week.
     </p>
 
     <p>
